--- a/main.css
+++ b/main.css
@@ -125,7 +125,7 @@ form{
     display: flex;
     justify-content: space-between;
     gap: 1em;
-    /* max-width: fit-content; */
+    max-width: fit-content;
     /* gap: 5em; */
     align-items:center;
     color:#FFFFFF;
@@ -134,6 +134,7 @@ form{
 .input-menu p{
     padding: .4em;
     background-color: #4F5D75;
+    max-width:fit-content;
 }
 .input menu input{
     flex-grow: 1;
@@ -144,6 +145,31 @@ form{
     color: #FFFFFF;
     padding: .5em;
     margin-left: 3em;
+    max-width: fit-content;
+}
+.option{
+    display: flex;
+    justify-content: space-between;
+    gap: 1em;
+    max-width: fit-content;
+    /* gap: 5em; */
+    align-items:center;
+    color:#FFFFFF;
+    margin-left: 3em;
+}
+.option p {
+    padding: .4em;
+    background-color: #4F5D75;
+    max-width:fit-content;
+}
+.book{
+    display: none;
+}
+.dvd{
+    display: none;
+}
+.furniture{
+    display: none;
 }
 .show{
     display: block;
